# core-harness

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  tests.yml
docs/: api-surface-v0.x.md  canonical-ownership.md  hook-contract.md  journal-contract.md  semver-policy.md
src/core_harness/: __init__.py
src/core_harness/audit/: __init__.py
src/core_harness/audit/lib/: journal_append.sh
src/core_harness/generator/: __init__.py
src/core_harness/hooks/: __init__.py
src/core_harness/hooks/lib/: core_harness_hooks.sh
src/core_harness/schema/: __init__.py  framework_schema.json
src/core_harness/validator/: __init__.py
tests/: test_audit.py  test_audit_bash.sh  test_generator.py  test_hooks.py  test_hooks_bash.sh  test_validator.py
