[project]
name = "core-harness"
version = "0.0.1"
description = "Reusable safety primitives for Claude Code orchestrator harnesses"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "suisya-systems", email = "iwama.ryo.0731@gmail.com" }]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

[project.urls]
Repository = "https://github.com/suisya-systems/core-harness"
Issues = "https://github.com/suisya-systems/core-harness/issues"

[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
